[package]
name = "oml-audio"
version = "0.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "Very basic, and thin abstraction of audio handling meant for games."
readme = "README.md"
homepage = "https://github.com/AndreasOM/oml-audio"
repository = "https://github.com/AndreasOM/oml-audio"
keywords = ["tools", "gamedev"]
categories = ["multimedia","game-development"]

default-run="oml-audio"

[features]
# default = [ "use_apple" ]
default = []
use_apple = []
use_miniaudio = []

[[bin]]
name="oml-audio"
path="src/oml_audio_main.rs"

[[bin]]
# run with
# `cargo +nightly bench --bin=benchmark -v --features=use_miniaudio`
name="benchmark"
path="src/benchmark.rs"

[dependencies]
#miniaudio = { version = "0.10.0", features = [ "ma-no-decoding", "ma-log-level-verbose", "ma-debug-output" ] }
miniaudio = { version = "0.10.0", features = [ "ma-no-decoding", "ma-log-level-verbose" ] }
ringbuf = "0.2.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
